k8s/notifications-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifications-api
  namespace: shop
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notifications-api
  template:
    metadata:
      labels:
        app: notifications-api
    spec:
      containers:
        - name: notifications-api
          image: dannelysbeth/notifications-api:1.0.0
          ports:
            - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: notifications-api
  namespace: shop
spec:
  ports:
    - port: 5001
      targetPort: 5001
  selector:
    app: notifications-api
